Fixed project section on mobile devices

--- a/style.css
+++ b/style.css
@@ -125,6 +125,20 @@ section {
   text-decoration: underline;
 }
 
+@media (max-width: 768px) {
+  .project-item {
+    background-color: #152846;
+    flex-direction: column;
+    text-align: center;
+    gap: 0;
+    border-radius: 0.5em;
+  }
+
+  .secondary-text {
+    display: none;
+  }
+}
+
 .career-content {
   padding: 40px 70px;
 }
@@ -359,11 +373,6 @@ ul li:hover:nth-child(3) a:after {
 /* Mobile */
 
 @media (max-width: 800px) {
-  #pong-game,
-  .hide-mobile {
-    display: none;
-  }
-
   .display-mobile {
     display: block;
   }
@@ -375,10 +384,6 @@ ul li:hover:nth-child(3) a:after {
 
   .career-content {
     padding: 40px;
-  }
-
-  img {
-    display: none;
   }
 
   #about-text {
